src/assets/styles/utils.css
.main-content {
    display: grid;
    background-color: var(--white);
    z-index: 10;
}

.no-scroll {
    overflow: hidden;
}

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    -webkit-clip-path: inset(100%);
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}


.short-text-two {
    display: -webkit-box;
    overflow: hidden;
    text-overflow: ellipsis;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
}

.short-text-three {
    display: -webkit-box;
    overflow: hidden;
    text-overflow: ellipsis;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 3;
}

.color-orange {
    color: var(--orange);
}

.color-dark-blue {
    color: var(--dark-blue);
}

.color-beige {
    color: var(--beige);
}

.background-color-white {
    background-color: var(--white);
    color: var(--dark-blue);
}

.background-color-orange {
    background-color: var(--orange);
    color: var(--white);
}

.background-color-dark-blue {
    background-color: var(--dark-blue);
    color: var(--white);
}

.background-color-beige {
    background-color: var(--beige);
}

.text-break::after {
    content: "\A";
    white-space: pre;
}

.main-content > div {
    z-index: 0;
}

